WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300979
[threaded-animation-resolution] fix decoding of `AcceleratedEffectTiming`
https://bugs.webkit.org/show_bug.cgi?id=300979
Summary
[threaded-animation-resolution] fix decoding of `AcceleratedEffectTiming`
Antoine Quint
Reported
2025-10-17 05:18:46 PDT
In
287181@main
we differentiated between specified values for animation effect timing properties `iterationDuration`, `startDelay` and `endDelay` and their resolved values. While we updated the serialization for the affected class, `AcceleratedEffectTiming`, we did not respect the order in which these properties are encoded and decoded. This was not apparent because the various properties that were switched around have types that can bridge between them (`WebAnimationTime`, `double` and `Seconds`) but it led to some issues when decoding the values since the wrong properties were being restored.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-17 05:22:11 PDT
<
rdar://problem/162856767
>
Antoine Quint
Comment 2
2025-10-17 05:23:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52553
EWS
Comment 3
2025-10-17 06:40:36 PDT
Committed
301703@main
(a992cac852a7): <
https://commits.webkit.org/301703@main
> Reviewed commits have been landed. Closing PR #52553 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug