Source/WebCore/animation/AnimationEffectTiming.h
@@ -52,15 +52,15 @@ struct AnimationEffectTiming {
     PlaybackDirection direction { PlaybackDirection::Normal };
     double iterationStart { 0 };
     double iterations { 1 };
-    Seconds specifiedStartDelay { 0_s };
-    Seconds specifiedEndDelay { 0_s };
-    std::optional<Seconds> specifiedIterationDuration;
     WebAnimationTime startDelay { 0_s };
     WebAnimationTime endDelay { 0_s };
     WebAnimationTime iterationDuration { 0_s };
     WebAnimationTime intrinsicIterationDuration { 0_s };
     WebAnimationTime activeDuration { 0_s };
     WebAnimationTime endTime { 0_s };
+    Seconds specifiedStartDelay { 0_s };
+    Seconds specifiedEndDelay { 0_s };
+    std::optional<Seconds> specifiedIterationDuration;
 
     struct ResolutionData {
         std::optional<WebAnimationTime> timelineTime;
