Source/WebCore/platform/animation/AcceleratedEffect.h
@@ -84,7 +84,7 @@ public:
     WEBCORE_EXPORT void apply(WebAnimationTime, AcceleratedEffectValues&) const;
 
     // Encoding and decoding support
-    AnimationEffectTiming timing() const { return m_timing; }
+    const AnimationEffectTiming& timing() const { return m_timing; }
     const Vector<Keyframe>& keyframes() const { return m_keyframes; }
     WebAnimationType animationType() const { return m_animationType; }
     CompositeOperation compositeOperation() const final { return m_compositeOperation; }
